# rust-beginner

./: Cargo.toml
.github/workflows/: rust.yml
src/: main (copy).rs  main.rs
