[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]


#[profile.release]
#opt-level = 'z'     # Optimize for size
#lto = true          # Enable link-time optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
#strip = 'symbols'        # Strip symbols from binary*


